statum-macros/tests/ui/invalid_state_empty_enum.stderr
error: Error: `#[state]` enum `EmptyState` must declare at least one variant.
       Found: `enum EmptyState {}`
       Expected: `enum EmptyState { Draft, InReview(InReviewData) }`
       Fix: add at least one unit state or single-payload state variant.
  --> tests/ui/invalid_state_empty_enum.rs:13:6
   |
13 | enum EmptyState {}
   |      ^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_state_empty_enum.rs:13:19
   |
13 | enum EmptyState {}
   |                   ^ consider adding a `main` function to `$DIR/tests/ui/invalid_state_empty_enum.rs`
